inou/prp/tests/errors/underflow_unsigned_expr.prp
/*
:name: underflow_unsigned_expr
:type: error
:error: does not fit
*/

// A signed expression whose value is negative does not fit an unsigned
// destination. Use an explicit bit-select to force the bit pattern.
//
// KNOWN-FAILING (location only): the bitwidth/constprop "does not fit" error is
// emitted with the correct message (so `:error:` matches), but with NO source
// span yet — declare/store LNAST nodes don't carry a source loc (only cassert/
// func_call do). So the source-line marker check below fails. Fixing it needs
// the loc-carry chain extended to declare/store + threading the nid into the
// bitwidth overflow path; tracked as the broader source-location work. Left
// failing intentionally until that lands.

mut v8:s8 = -1
const ones = v8 | 0xff

//mut c_ok:u8 = nil
//wrap c_ok = ones
//cassert(c_ok == 255)

const c:u8 = ones  // locate_error_here
